[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.0.4"
actix-server = "2.1.1"
actix-service = "2.0.2"
actix-web = "4.0.1"
tokio = { version = "1.17.0", features = ["macros"] }
